<resources>
    <string name="app_name">Rentzy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_intro">We happy to see you again, to use your account you need to login first!</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="login"><u>Login</u></string>
    <string name="success">Success</string>


    <string name="dummyreview">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</string>
    <string name="dummy">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</string>
    <string name="house_description_hint">This move-in ready home has been recently updated, including new windows that provide ample of natural light. Enjoy the shaded backyard or walk to the neighborhood park down the street.</string>
    <string name="owner_s_name">Owner\'s name</string>
    <string name="owner_s_number">Owner\'s number</string>
    <string name="house_name">House name</string>
    <string name="house_address">House address</string>
    <string name="house_rent">House rent (in ₹)</string>
    <string name="no_of_bathroom">No.of bathroom</string>
    <string name="no_of_kitchen">No. of kitchen</string>
    <string name="no_of_bedroom">No. of bedroom</string>
    <string name="no_of_swimming_pool">No. of swimming pool</string>
    <string name="no_of_parking">No. of parking</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="contact_us">Contact us</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="your_name">Your name</string>
    <string name="email_address">Email address</string>
    <string name="you_want_to_talk_about">You want to talk about</string>
    <string name="your_message">Your message</string>
    <string name="send">Send</string>
    <string name="current_location">Current Location</string>
    <string name="search_here">Search here...</string>
    <string name="faq">Faq</string>
    <string name="book_now">Book Now</string>
    <string name="houserent">House Rent</string>
    <string name="about">About</string>
    <string name="address">Address</string>
    <string name="owner">Owner:-</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="personal_details">Personal Details</string>
    <string name="accounts">Accounts</string>
    <string name="manage_all_your_accounts">Manage all your accounts</string>
    <string name="syncing">Syncing</string>
    <string name="confiue_background_refreshing">Configure background refreshing</string>
    <string name="email_settings">Email Settings</string>
    <string name="restrict_content_for_your_data">Restrict content for your data</string>
    <string name="wifi">Wifi</string>
    <string name="limit_data_usage_to_wifi_only">Limit data usage to wifi only</string>
    <string name="notifications">Notifications</string>
    <string name="change_app_notifications_settings">Change app notifications settings</string>
    <string name="general_site_usage">General Site Usage</string>
    <string name="last_revised_february_28_2023">Last Revised : February 28 2023</string>
    <string name="your_agreement">Your Agreement</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="ask_change_language">Are you sure to change language?</string>
    <string name="english">English</string>
    <string name="gujarati">ગુજરાતી</string>
    <string name="sure_to_logout">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dark_mode">Dark Mode</string>


</resources>