<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".fragment.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <RelativeLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_previewImage"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/add_thumbnail" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_addImage"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/add_image" />

            </RelativeLayout>

            <com.example.rentzy.customfont.CustomTextView
                style="@style/black_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:includeFontPadding="false"
                android:text="@string/owner_s_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_rect"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_6sdp">

                <com.example.rentzy.customfont.CustomEdittext
                    android:id="@+id/edt_ownerName"
                    style="@style/black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="e.g.:- John Martin" />

            </LinearLayout>

            <com.example.rentzy.customfont.CustomTextView
                style="@style/black_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/owner_s_number" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_rect"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_6sdp">

                <com.example.rentzy.customfont.CustomEdittext
                    android:id="@+id/edt_ownerNumber"
                    style="@style/black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="e.g.:- 1234567890"
                    android:inputType="number"
                    android:maxLength="10" />

            </LinearLayout>

            <com.example.rentzy.customfont.CustomTextView
                style="@style/black_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/house_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_rect"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_6sdp">

                <com.example.rentzy.customfont.CustomEdittext
                    android:id="@+id/edt_houseName"
                    style="@style/black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="e.g.:- Cooper Avenue" />

            </LinearLayout>

            <com.example.rentzy.customfont.CustomTextView
                style="@style/black_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/house_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_rect"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_6sdp">

                <com.example.rentzy.customfont.CustomEdittext
                    android:id="@+id/edt_houseAddress"
                    style="@style/black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:minLines="2"
                    android:ellipsize="end"
                    android:hint="e.g.:- 28th street, B/h Central Grarden, Brooklyn, New York" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.example.rentzy.customfont.CustomTextView
                        style="@style/black_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/house_rent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/gray_rect"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_6sdp">

                        <com.example.rentzy.customfont.CustomEdittext
                            android:id="@+id/edt_houseRent"
                            style="@style/black_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="e.g.:- 10000"
                            android:inputType="number" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.example.rentzy.customfont.CustomTextView
                        style="@style/black_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/no_of_bathroom" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/gray_rect"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_6sdp">

                        <com.example.rentzy.customfont.CustomEdittext
                            android:id="@+id/edt_houseBathroom"
                            style="@style/black_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="e.g.:- 3"
                            android:inputType="number" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.example.rentzy.customfont.CustomTextView
                        style="@style/black_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/no_of_kitchen" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/gray_rect"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_6sdp">

                        <com.example.rentzy.customfont.CustomEdittext
                            android:id="@+id/edt_houseKitchen"
                            style="@style/black_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="e.g.:- 1"
                            android:inputType="number" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.example.rentzy.customfont.CustomTextView
                        style="@style/black_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/no_of_bedroom" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/gray_rect"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_6sdp">

                        <com.example.rentzy.customfont.CustomEdittext
                            android:id="@+id/edt_bedroom"
                            style="@style/black_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="e.g.:- 3"
                            android:inputType="number" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.example.rentzy.customfont.CustomTextView
                        style="@style/black_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/no_of_swimming_pool" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/gray_rect"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_6sdp">

                        <com.example.rentzy.customfont.CustomEdittext
                            android:id="@+id/edt_housePool"
                            style="@style/black_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="e.g.:- 1"
                            android:inputType="number" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.example.rentzy.customfont.CustomTextView
                        style="@style/black_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="@string/no_of_parking" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/gray_rect"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_6sdp">

                        <com.example.rentzy.customfont.CustomEdittext
                            android:id="@+id/edt_houseParking"
                            style="@style/black_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="e.g.:- 2"
                            android:inputType="number" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <com.example.rentzy.customfont.CustomTextView
                style="@style/black_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_rect"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_6sdp">

                <com.example.rentzy.customfont.CustomEdittext
                    android:id="@+id/edt_houseDescription"
                    style="@style/black_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/house_description_hint"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:ellipsize="end"/>

            </LinearLayout>

            <com.example.rentzy.customfont.CustomTextViewMedium
                android:id="@+id/tv_add"
                style="@style/white_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/app_main_gradient"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/add" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>